Last CoDE Update

--- a/DS Con; Cluster Websites.ipynb
+++ b/DS Con; Cluster Websites.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -37,10 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -63,10 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -195,19 +189,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: Do not use the development server in a production environment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       " * Running on http://localhost:8080/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [23/May/2018 14:18:06] \"GET /cluster_home HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/May/2018 14:18:33] \"GET /cluster_home HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [04/Jul/2018 10:36:10] \"\u001b[33mGET / HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [04/Jul/2018 10:36:11] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [04/Jul/2018 10:36:11] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [04/Jul/2018 10:36:46] \"\u001b[37mGET /cluster_home HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -1120,31 +1126,12 @@
     "\n",
     "app.run(host='localhost', port=8080)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Could do:\n",
-    "\n",
-    "#Home page:\n",
-    "#Make charts on home clickable through to word search\n",
-    "\n",
-    "#Live tables:\n",
-    "#Make pie chart click through to cluster (very difficult)\n",
-    "\n",
-    "#Need to make a business events page?"
-   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1158,7 +1145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
