--- a/DS Con; Scraping Content.ipynb
+++ b/DS Con; Scraping Content.ipynb
@@ -18,7 +18,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -32,15 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "stopwords = []\n",
     "\n",
-    "with open('/home/de-admin/Documents/Webscraping/Pastebin/stopwords/corpora/stopwords/english','rb') as f:\n",
+    "with open('/home/de-admin/Documents/github folders/Mike Thomas/Pastebin/Pastebin/stopwords/corpora/stopwords/english','rb') as f:\n",
     "    reader = csv.reader(f)\n",
     "    for row in reader:\n",
     "        stopwords += row"
@@ -48,10 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -73,8 +70,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "try:\n",
     "    cnx = mysql.connector.connect(host=\"aintnodatabase.c3hfm1hvxqhx.eu-west-2.rds.amazonaws.com\",port=3306,database=\"pastebin\",user=\"root\",password=pswd)\n",
@@ -106,10 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class MySpider(scrapy.Spider):\n",
@@ -208,7 +205,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -216,13 +212,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-05-18 12:50:59 [scrapy.utils.log] INFO: Scrapy 1.3.3 started (bot: scrapybot)\n",
-      "2018-05-18 12:50:59 [scrapy.utils.log] INFO: Overridden settings: {}\n",
-      "2018-05-18 12:50:59 [scrapy.middleware] INFO: Enabled extensions:\n",
-      "['scrapy.extensions.logstats.LogStats',\n",
+      "2018-07-04 10:43:47 [scrapy.utils.log] INFO: Scrapy 1.5.0 started (bot: scrapybot)\n",
+      "2018-07-04 10:43:47 [scrapy.utils.log] INFO: Versions: lxml 4.2.3.0, libxml2 2.9.8, cssselect 1.0.3, parsel 1.4.0, w3lib 1.19.0, Twisted 17.9.0, Python 2.7.15rc1 (default, Apr 15 2018, 21:51:34) - [GCC 7.3.0], pyOpenSSL 17.5.0 (OpenSSL 1.1.0g  2 Nov 2017), cryptography 2.1.4, Platform Linux-4.15.0-24-generic-x86_64-with-Ubuntu-18.04-bionic\n",
+      "2018-07-04 10:43:47 [scrapy.crawler] INFO: Overridden settings: {'RETRY_TIMES': 3, 'DOWNLOAD_DELAY': 2}\n",
+      "2018-07-04 10:43:47 [scrapy.middleware] INFO: Enabled extensions:\n",
+      "['scrapy.extensions.memusage.MemoryUsage',\n",
+      " 'scrapy.extensions.logstats.LogStats',\n",
       " 'scrapy.extensions.telnet.TelnetConsole',\n",
       " 'scrapy.extensions.corestats.CoreStats']\n",
-      "2018-05-18 12:50:59 [scrapy.middleware] INFO: Enabled downloader middlewares:\n",
+      "2018-07-04 10:43:47 [scrapy.middleware] INFO: Enabled downloader middlewares:\n",
       "['scrapy.downloadermiddlewares.httpauth.HttpAuthMiddleware',\n",
       " 'scrapy.downloadermiddlewares.downloadtimeout.DownloadTimeoutMiddleware',\n",
       " 'scrapy.downloadermiddlewares.defaultheaders.DefaultHeadersMiddleware',\n",
@@ -232,18 +230,44 @@
       " 'scrapy.downloadermiddlewares.httpcompression.HttpCompressionMiddleware',\n",
       " 'scrapy.downloadermiddlewares.redirect.RedirectMiddleware',\n",
       " 'scrapy.downloadermiddlewares.cookies.CookiesMiddleware',\n",
+      " 'scrapy.downloadermiddlewares.httpproxy.HttpProxyMiddleware',\n",
       " 'scrapy.downloadermiddlewares.stats.DownloaderStats']\n",
-      "2018-05-18 12:50:59 [scrapy.middleware] INFO: Enabled spider middlewares:\n",
+      "2018-07-04 10:43:47 [scrapy.middleware] INFO: Enabled spider middlewares:\n",
       "['scrapy.spidermiddlewares.httperror.HttpErrorMiddleware',\n",
       " 'scrapy.spidermiddlewares.offsite.OffsiteMiddleware',\n",
       " 'scrapy.spidermiddlewares.referer.RefererMiddleware',\n",
       " 'scrapy.spidermiddlewares.urllength.UrlLengthMiddleware',\n",
       " 'scrapy.spidermiddlewares.depth.DepthMiddleware']\n",
-      "2018-05-18 12:50:59 [scrapy.middleware] INFO: Enabled item pipelines:\n",
+      "2018-07-04 10:43:47 [scrapy.middleware] INFO: Enabled item pipelines:\n",
       "[]\n",
-      "2018-05-18 12:50:59 [scrapy.core.engine] INFO: Spider opened\n",
-      "2018-05-18 12:50:59 [scrapy.extensions.logstats] INFO: Crawled 0 pages (at 0 pages/min), scraped 0 items (at 0 items/min)\n",
-      "2018-05-18 12:50:59 [scrapy.extensions.telnet] DEBUG: Telnet console listening on 127.0.0.1:6023\n"
+      "2018-07-04 10:43:47 [scrapy.core.engine] INFO: Spider opened\n",
+      "2018-07-04 10:43:47 [scrapy.extensions.logstats] INFO: Crawled 0 pages (at 0 pages/min), scraped 0 items (at 0 items/min)\n",
+      "2018-07-04 10:43:47 [scrapy.extensions.telnet] DEBUG: Telnet console listening on 127.0.0.1:6023\n",
+      "2018-07-04 10:49:39 [scrapy.extensions.logstats] INFO: Crawled 0 pages (at 0 pages/min), scraped 0 items (at 0 items/min)\n",
+      "2018-07-04 10:49:58 [scrapy.downloadermiddlewares.retry] DEBUG: Retrying <GET https://pastebin.com/F9fZpNzY> (failed 1 times): [<twisted.python.failure.Failure twisted.internet.error.ConnectionDone: Connection was closed cleanly.>]\n",
+      "2018-07-04 10:49:58 [scrapy.extensions.logstats] INFO: Crawled 0 pages (at 0 pages/min), scraped 0 items (at 0 items/min)\n",
+      "2018-07-04 10:50:13 [scrapy.downloadermiddlewares.retry] DEBUG: Retrying <GET https://pastebin.com/CZApsBnu> (failed 1 times): [<twisted.python.failure.Failure twisted.internet.error.ConnectionDone: Connection was closed cleanly.>]\n",
+      "2018-07-04 10:50:14 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/HdEU9vda> (referer: None)\n",
+      "2018-07-04 10:50:16 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/iZCcEMiA> (referer: None)\n",
+      "2018-07-04 10:50:18 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/SPrq3U7i> (referer: None)\n",
+      "2018-07-04 10:50:32 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/R2PjYerQ> (referer: None)\n",
+      "2018-07-04 10:50:35 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/M327UQXz> (referer: None)\n",
+      "2018-07-04 10:50:38 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/mWp48dZS> (referer: None)\n",
+      "2018-07-04 10:50:40 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/vEzgfugW> (referer: None)\n",
+      "2018-07-04 10:50:42 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/F9fZpNzY> (referer: None)\n",
+      "2018-07-04 10:50:45 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/UGkgvq12> (referer: None)\n",
+      "2018-07-04 10:50:47 [scrapy.extensions.logstats] INFO: Crawled 9 pages (at 9 pages/min), scraped 0 items (at 0 items/min)\n",
+      "2018-07-04 10:50:48 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/D70EPLJ9> (referer: None)\n",
+      "2018-07-04 10:50:50 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://pastebin.com/6YnuQGEu> (referer: None)\n",
+      "2018-07-04 10:58:16 [scrapy.crawler] INFO: Received SIGINT, shutting down gracefully. Send again to force \n",
+      "2018-07-04 10:58:16 [scrapy.crawler] INFO: Received SIGINT twice, forcing unclean shutdown\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2055: Lost connection to MySQL server at 'aintnodatabase.c3hfm1hvxqhx.eu-west-2.rds.amazonaws.com:3306', system error: 4 Interrupted system call\n"
      ]
     }
    ],
@@ -266,7 +290,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -280,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
